import("//build_overrides/clspv.gni")

# clspv-opt executable target

config("clspv_opt_config") {
  # include deps
  include_dirs = [
    "../../include",
    "//$clspv_llvm_dir/llvm/tools/opt",
    "$root_gen_dir/$clspv_llvm_dir",
  ]

  configs = [ "../../gn/build:llvm_code" ]
}

executable("clspv-opt") {
  sources = [ "main.cpp" ]

  configs += [ ":clspv_opt_config" ]
  configs += clspv_configs_to_append
  configs -= clspv_configs_to_remove

  deps = [ "../../lib:clspv_passes" ]
}
